# control-homewizard-devices

./: .gitignore  LICENSE  NOTICE  README.md  control_energy_systems.py  device_classes.py  pyproject.toml  requirements.txt  update_and_restart.sh  utils.py
.github/workflows/: ci.yml  deploy.yml
example_files/: config_devices.json  deploy-check.service  deploy-check.timer  hwe_control_script.service
src/control_homewizard_devices/: __init__.py  config_devices.json  constants.py  control_energy_systems.py  device_classes.py  e_paper_display.py  power_forecast.py  schedule_devices.py  schedule_devices_pulp.py  schedule_devices_scip.py  scheduling_benchmark.py  utils.py
src/control_homewizard_devices/hwe_v2_wrapper/: cacert.py  const_wrapper.py  errors_wrapper.py  init_wrapper.py  models_wrapper.py  utils_wrapper.py
tests/: conftest.py  test_data_plotting.py  test_icon_tiling.py  test_power_forecast.py  test_pulp_solver.py
