[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "control-homewizard-devices"
version = "0.0.1"
authors = ["Ian van Vliet <ian.vvliet@gmail.com>"]
description = "A python package controlling and scheduling homewizard devices"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
packages = [{ include = "control_homewizard_devices", from = "src" }]

[tool.poetry.dependencies]
python = "3.11.2"
pandas = "^2.3.1"
python-homewizard-energy = "6.3.0"
mashumaro = "^3.16"
awesomeversion = "^25.8.0"
orjson = "^3.11.2"
quartz-solar-forecast = "^1.1.18"
plotly = "^6.3.0"
huggingface-hub = "0.17.3"
pillow = "^11.3.0"
spidev = { version = ">=3.7,<4.0", markers = 'sys_platform == "linux" and (platform_machine == "armv7l" or platform_machine == "aarch64")' }
gpiozero = { version = ">=2.0.1,<3.0.0", markers = 'sys_platform == "linux" and (platform_machine == "armv7l" or platform_machine == "aarch64")' }
rpi-gpio = { version = ">=0.7.1,<0.8.0", markers = 'sys_platform == "linux" and (platform_machine == "armv7l" or platform_machine == "aarch64")' }
lgpio = { version = ">=0.2.2.0,<0.3.0.0", markers = 'sys_platform == "linux" and (platform_machine == "armv7l" or platform_machine == "aarch64")' }
kaleido = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore::pydantic.warnings.PydanticDeprecatedSince20:huggingface_hub.*",
]

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = ["E", "F", "W", "C", "B"]
exclude = ["__pycache__"]

[tool.poetry.scripts]
myservice = "control_homewizard_devices.control_energy_systems:entrypoint"
